Introduce \Cat keyword